# AgenticsC-

./: .gitignore  CMakeLists.txt  README.md
include/repo_refactorer/core/: agent.h  context.h
src/: main.cpp
src/core/: agent.h
